fix: hover issue on iOS

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -7,8 +7,9 @@
 @import "./projects.sass"
 @import "./colors.sass"
 
-a.navbar-item:hover
-  color: $tcasey-blue !important
+@media (hover: hover)
+  a.navbar-item:hover
+    color: $tcasey-blue !important
 a:focus
   color: $tcasey-blue
 // Helper Classes
@@ -61,9 +62,10 @@ body::-webkit-scrollbar-thumb
   color: #fff
   text-align: center
   transition: all .15s ease
-.btn-gradient:hover
-  background-image: linear-gradient(253deg, #075dff, #0780ff)
-  color: #fff
+@media (hover: hover)
+  .btn-gradient:hover
+    background-image: linear-gradient(253deg, #075dff, #0780ff)
+    color: #fff
 
 #___gatsby
   overflow: hidden
